[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "processingtools"
version = "0.5.0"
description = "A tool for image/video processing"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name="syy", email="ysy9997@gmail.com" }]
dependencies = [
    "opencv-python>=4.5.5.62",
    "numpy>=1.19.4",
    "matplotlib>=3.3.3"
]